updated skills section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="icon" type="image/png" href="assets/img/animoji.jpg" />
     <title>@kpanjabi</title>
 </head>
 
@@ -43,10 +43,9 @@
             <div class="home__data">
                 <h1 class="home__title">Hi, I'm <span class="home__title-color">Kush. 👋🏼</span><br>Software Engineer
                 </h1>
-
-                <a href="mailto:kushpanjabi@icloud.com" class="button">Contact</a>
                 <a href="https://kushpanjabi.github.io/google-portfolio/" target="_blank"
                     class="button bt2">Portfolio</a>
+                <a href="mailto:kushpanjabi@icloud.com" class="button">Email Me</a>
 
             </div>
 
@@ -99,7 +98,6 @@
                     <span class="skills__name">ExpressJS</span>
                     <span class="skills__name">Git/GitHub</span>
                     <span class="skills__name">Heroku</span>
-                    <span class="skills__name">HTML5</span>
                     <span class="skills__name">Mocha</span>
                     <span class="skills__name">Chai</span>
                     <span class="skills__name">NPM</span>
